k8s/policies/each-namespace/defaults.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# allow egress to dns
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-dns-egress
spec:
  podSelector: {}
  egress:
  - to:
    ports:
    - protocol: UDP
      port: 53
---
# allow cluster > kubernetes api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-kubernetes-api-egress
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.96.0.1/32
    ports:
    - port: 443
      protocol: TCP
  # this part exists for hostnetwork'd setups such as minikube
  - to:
    - ipBlock:
        cidr: 127.0.0.1/0
    ports:
    - port: 8443
      protocol: TCP
